@@ -62,7 +62,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return (SignonInfo)connection_.callMethod(pxId_, "changePassword", new Class[] { String.class, Boolean.TYPE, String.class, byte[].class, byte[].class }, new Object[] { systemName, new Boolean(systemNameLocal), userId, oldBytes, newBytes }).getReturnValue();
+            return (SignonInfo)connection_.callMethod(pxId_, "changePassword", new Class[] { String.class, Boolean.TYPE, String.class, byte[].class, byte[].class }, new Object[] { systemName, Boolean.valueOf(systemNameLocal), userId, oldBytes, newBytes }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -81,7 +81,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
         {
             connection_.callMethod(pxId_, "connect", 
                 new Class[] { Integer.TYPE, Integer.TYPE, Boolean.TYPE }, 
-                new Object[] { new Integer(service), new Integer(overridePort), new Boolean(skipSignonServer) });
+                new Object[] { new Integer(service), new Integer(overridePort), Boolean.valueOf(skipSignonServer) });
         }
         catch (InvocationTargetException e)
         {
@@ -109,7 +109,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
             return (Socket)connection_.callMethod(pxId_, 
                 "connectToPort", 
                 new Class[] { Integer.TYPE, Boolean.TYPE }, 
-                new Object[] { new Integer(port), new Boolean(forceNonLocalhost) }).getReturnValue();
+                new Object[] { new Integer(port), Boolean.valueOf(forceNonLocalhost) }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -320,7 +320,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            connection_.callMethod(pxId_, "setState", new Class[] { SSLOptions.class, Boolean.TYPE, Boolean.TYPE, Integer.TYPE, String.class, SocketProperties.class, String.class, Boolean.TYPE, Boolean.TYPE, Boolean.TYPE }, new Object[] { useSSLConnection, new Boolean(canUseNativeOptimization), new Boolean(threadUsed), new Integer(ccsid), nlv, socketProperties, ddmRDB, new Boolean(mustUseNetSockets), new Boolean(mustUseSuppliedProfile), new Boolean(mustAddLanguageLibrary) } );
+            connection_.callMethod(pxId_, "setState", new Class[] { SSLOptions.class, Boolean.TYPE, Boolean.TYPE, Integer.TYPE, String.class, SocketProperties.class, String.class, Boolean.TYPE, Boolean.TYPE, Boolean.TYPE }, new Object[] { useSSLConnection, Boolean.valueOf(canUseNativeOptimization), Boolean.valueOf(threadUsed), new Integer(ccsid), nlv, socketProperties, ddmRDB, Boolean.valueOf(mustUseNetSockets), Boolean.valueOf(mustUseSuppliedProfile), Boolean.valueOf(mustAddLanguageLibrary) } );
         }
         catch (InvocationTargetException e)
         {
@@ -333,7 +333,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return (SignonInfo)connection_.callMethod(pxId_, "signon", new Class[] { String.class, Boolean.TYPE, String.class, CredentialVault.class, String.class }, new Object[] { systemName, new Boolean(systemNameLocal), userId, vault, gssName }).getReturnValue();
+            return (SignonInfo)connection_.callMethod(pxId_, "signon", new Class[] { String.class, Boolean.TYPE, String.class, CredentialVault.class, String.class }, new Object[] { systemName, Boolean.valueOf(systemNameLocal), userId, vault, gssName }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
@@ -346,7 +346,7 @@ class AS400ImplProxy extends AbstractProxyImpl implements AS400Impl
     {
         try
         {
-            return (SignonInfo)connection_.callMethod(pxId_, "skipSignon", new Class[] { String.class, Boolean.TYPE, String.class, CredentialVault.class, String.class }, new Object[] { systemName, new Boolean(systemNameLocal), userId, vault, gssName }).getReturnValue();
+            return (SignonInfo)connection_.callMethod(pxId_, "skipSignon", new Class[] { String.class, Boolean.TYPE, String.class, CredentialVault.class, String.class }, new Object[] { systemName, Boolean.valueOf(systemNameLocal), userId, vault, gssName }).getReturnValue();
         }
         catch (InvocationTargetException e)
         {
