@@ -334,8 +334,8 @@ public class DataQueueAttributes implements Serializable
         }
         else
         {
-            Boolean oldValue = new Boolean(FIFO_);
-            Boolean newValue = new Boolean(FIFO);
+            Boolean oldValue = Boolean.valueOf(FIFO_);
+            Boolean newValue = Boolean.valueOf(FIFO);
 
             if (vetoableChangeListeners_ != null)
             {
@@ -364,8 +364,8 @@ public class DataQueueAttributes implements Serializable
         }
         else
         {
-            Boolean oldValue = new Boolean(forceToAuxiliaryStorage_);
-            Boolean newValue = new Boolean(forceToAuxiliaryStorage);
+            Boolean oldValue = Boolean.valueOf(forceToAuxiliaryStorage_);
+            Boolean newValue = Boolean.valueOf(forceToAuxiliaryStorage);
 
             if (vetoableChangeListeners_ != null)
             {
@@ -430,8 +430,8 @@ public class DataQueueAttributes implements Serializable
         }
         else
         {
-            Boolean oldValue = new Boolean(saveSenderInfo_);
-            Boolean newValue = new Boolean(saveSenderInfo);
+            Boolean oldValue = Boolean.valueOf(saveSenderInfo_);
+            Boolean newValue = Boolean.valueOf(saveSenderInfo);
 
             if (vetoableChangeListeners_ != null)
             {
